# platform_external_gst_ogg

./: Android.mk  Makefile.am  autogen.sh  configure.in
src/: Makefile.am
